--- a/chamber/styles/normalize.css
+++ b/chamber/styles/normalize.css
@@ -25,7 +25,10 @@ body {
     line-height: 1.5;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    /* text-rendering: optimizeLegibility; */
+}
+
+main {
+    min-height: 100svh;
 }
 
 img,
